--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,7 @@
+.Container {
+    margin-bottom: 20px;
+}
+
 .home_Container {
     display: flex;
     justify-content: space-between;
@@ -39,6 +43,12 @@
 .banner_section img {
     width: 90%;
     height: 90%;
+}
+
+.review_Title {
+    font-size: 35px;
+    color: #22bedd;
+    letter-spacing: 3px;
 }
 
 /* From cssbuttons.io by @alexmaracinaru */
